Added fucntionality for coordinator to see all student availabiltiy. Formatting for numbers still needs to be done

--- a/src/main/resources/templates/Coordinator.html
+++ b/src/main/resources/templates/Coordinator.html
@@ -14,6 +14,7 @@
     margin-right: auto;">
         <button class="btn btn-outline-primary" type="submit" formaction="/enrollment">Student Enrollment</button>
         <button class="btn btn-outline-primary" type="submit" formaction="/projectDeadline">Project Deadline</button>
+        <button class="btn btn-outline-primary" type="submit" formaction="/studentAvailability">Student Availability</button>
     </form>
 </nav>
 
