Fixed some small issues with html

--- a/src/main/resources/templates/projectDeadline.html
+++ b/src/main/resources/templates/projectDeadline.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <nav class="navbar navbar-dark bg-dark">
-    <a class="navbar-brand" style=" color:white;">Welcome Coordinator</a>
+    <a class="navbar-brand" style=" color:white;" href="/coord">Welcome [[${#httpServletRequest.remoteUser}]] </a>
     <form class="form-inline" style=" margin-left: auto;
     margin-right: auto;">
         <button class="btn btn-outline-primary" type="submit" formaction="/enrollment">Student Enrollment</button>
